# Rich-Colours

./: README.md  demo.tape  pyproject.toml
src/rich_colours/: __init__.py  generate.py
