[project]
name = "rich-colours"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Saikat Karmakar", email = "" }
]
dependencies = [
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rich_colours"]
